<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_inicio"
            android:icon="@drawable/ic_busqueda"
            android:title="@string/nav_inicio" />
        <item
            android:id="@+id/nav_consulta"
            android:icon="@drawable/ic_inicio"
            android:title="@string/nav_consulta" />


        <item
            android:id="@+id/nav_citas"
            android:icon="@drawable/ic_citas"
            android:title="@string/nav_citas" />

        <item
            android:id="@+id/nav_casos"
            android:icon="@drawable/ic_casos"
            android:title="@string/nav_casos" />
    </group>

    <item android:title="@string/mi_herramientas">
        <menu>
            <item
                android:id="@+id/nav_cerrar"
                android:icon="@drawable/mi_salir"
                android:title="@string/nav_cerrar" />
        </menu>
    </item>

</menu>
