<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:float="http://schemas.android.com/tools"
    android:background="@drawable/fondo_veder"
    android:orientation="vertical"
    android:gravity="center">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="vertical">

        <com.med.finder.doctor.utilidades.CustomFontTextView
            android:id="@+id/customFontTextView2"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/fourty_text"
            android:gravity="center"
            android:text="@string/str_titulo"
            android:textSize="@dimen/text_8"
            app:fontAttr="@string/font_myraid_bold"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:src="@drawable/logo" />


    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="center|bottom"
        android:orientation="vertical">
        <com.med.finder.doctor.utilidades.CustomFontTextView
            android:id="@+id/customFontTextView"
            style="@style/TextAppearance.AppCompat.Title"
            android:textSize="@dimen/text_4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_edsoft"
            android:layout_marginBottom="@dimen/margin_1"
            android:textColor="@color/fourty_text"
            app:fontAttr="@string/font_myraid_roman"/>


    </LinearLayout>
</LinearLayout>
