<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="7"
        android:layout_marginLeft="@dimen/margin_1"
        android:layout_marginRight="@dimen/margin_1"
        android:orientation="vertical">
        <LinearLayout android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:orientation="horizontal">
            <com.med.finder.doctor.utilidades.CustomFontTextView
                android:id="@+id/lblTitulo"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/dimen_4"
                android:gravity="center"
                android:textSize="@dimen/text_1"
                android:text="@string/str_registro_familiar"
                android:textColor="@color/theme_window_background"
                android:textStyle="bold"
                app:fontAttr="@string/font_myraid_bold" />
        </LinearLayout>
        <ListView
            android:id="@+id/list"
            android:layout_marginTop="@dimen/margin_1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/viewButtom"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/dimen_6"
        android:layout_marginRight="@dimen/margin_2"
        android:gravity="right|center"
        android:layout_weight="1"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnAgregar"
            android:layout_width="@dimen/dimen_15"
            android:layout_height="@dimen/dimen_5"
            android:text="@string/btn_agregar"
            android:textColor="?android:colorBackground"
            android:textSize="@dimen/text_1"
            android:textStyle="bold"
            android:theme="@style/MyButton" />


    </LinearLayout>
</LinearLayout>